@@ -1,4 +1,5 @@
 4 Nov 2017
+update: config files
 remove: unused javascript files
 update: admin/block.settings.php
 update: user_blocks.php
